// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<style></style>

=====================================output=====================================
<style></style>

================================================================================
`;

exports[`less.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<style type="text/less">
  @nice-blue: #5B83AD;
  @light-blue: @nice-blue + #111;

  #header {
    color: @light-blue;
  }
</style>

<style lang="less">
  @nice-blue: #5B83AD;
  @light-blue: @nice-blue + #111;

  #header {
    color: @light-blue;
  }
</style>

=====================================output=====================================
<style type="text/less">
  @nice-blue: #5B83AD;
  @light-blue: @nice-blue + #111;

  #header {
    color: @light-blue;
  }
</style>

<style lang="less">
  @nice-blue: #5b83ad;
  @light-blue: @nice-blue + #111;

  #header {
    color: @light-blue;
  }
</style>

================================================================================
`;

exports[`postcss.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<style type="text/css">
  body { background: navy; color: yellow; }
</style>

<style lang="postcss">
  body { background: navy; color: yellow; }
</style>

=====================================output=====================================
<style type="text/css">
  body {
    background: navy;
    color: yellow;
  }
</style>

<style lang="postcss">
  body {
    background: navy;
    color: yellow;
  }
</style>

================================================================================
`;

exports[`scss.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<style type="text/x-scss">
  $font-stack:    Helvetica, sans-serif;
  $primary-color: #333;

  body {
    font: 100% $font-stack;
    color: $primary-color;
  }
</style>

<style lang="scss">
  $font-stack:    Helvetica, sans-serif;
  $primary-color: #333;

  body {
    font: 100% $font-stack;
    color: $primary-color;
  }
</style>

<style lang="scss">
.someElement {
    @include bp-medium {
      display: flex;
    }
    
    @include bp-large {
      margin-top: 10px;
      margin-bottom: 10px;
    }
}
</style>

=====================================output=====================================
<style type="text/x-scss">
  $font-stack: Helvetica, sans-serif;
  $primary-color: #333;

  body {
    font: 100% $font-stack;
    color: $primary-color;
  }
</style>

<style lang="scss">
  $font-stack: Helvetica, sans-serif;
  $primary-color: #333;

  body {
    font: 100% $font-stack;
    color: $primary-color;
  }
</style>

<style lang="scss">
  .someElement {
    @include bp-medium {
      display: flex;
    }

    @include bp-large {
      margin-top: 10px;
      margin-bottom: 10px;
    }
  }
</style>

================================================================================
`;

exports[`simple.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!DOCTYPE html>
<html>
  <head>
    <title>Sample styled page</title>
    <style>a { color: red; }</style>
    <style>
      body { background: navy; color: yellow; }
    </style>
  </head>
  <body>
    <h1>Sample styled page</h1>
    <p>This page is just a demo.</p>
  </body>
</html>

=====================================output=====================================
<!DOCTYPE html>
<html>
  <head>
    <title>Sample styled page</title>
    <style>
      a {
        color: red;
      }
    </style>
    <style>
      body {
        background: navy;
        color: yellow;
      }
    </style>
  </head>
  <body>
    <h1>Sample styled page</h1>
    <p>This page is just a demo.</p>
  </body>
</html>

================================================================================
`;

exports[`single-style.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<style>a { color: red; }</style>
<style>
  h1 {
    font-size: 120%;
    font-family: Verdana, Arial, Helvetica, sans-serif;
    color: #333366;
  }
</style>

=====================================output=====================================
<style>
  a {
    color: red;
  }
</style>
<style>
  h1 {
    font-size: 120%;
    font-family: Verdana, Arial, Helvetica, sans-serif;
    color: #333366;
  }
</style>

================================================================================
`;
